--- a/Medical Appointment No-Show.ipynb
+++ b/Medical Appointment No-Show.ipynb
@@ -1026,7 +1026,7 @@
    "outputs": [],
    "source": [
     "age_digitizer = Digitizer('Age', [0, 0.01, 2, 6, 15, 30, 60, 120])\n",
-    "scheduled_hour_digitizer = Digitizer('ScheduledHour', [5, 10, 15, 23])\n",
+    "scheduled_hour_digitizer = Digitizer('ScheduledHour', [10, 13, 17, 20])\n",
     "awaiting_time_digitizer = Digitizer('AwaitingTime', [0, 1, 7, 30, 99999])"
    ]
   },
@@ -2669,21 +2669,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
